# 2.4g-mems-

./: DIFF_README.md  README.md  dump_rx_frames.py  export_fake_adc_csv.py  rx_stats.csv  save_mems_binary.py  save_serial_csv.py  tx_stats.csv  view_mems.py
.github/ISSUE_TEMPLATE/: config.yml
2.4g_results/: rx_frames_20260424_150031.csv
applications/: 2.4g指南.txt  nRF54L15 Connect Kit 开发指南（单核 + 双核）.txt  rf_link_DESIGN.md  rf_link_README.md  rf_link_development_log.txt  rf_link_experiment_records.md  rf_link_parameter_matrix.csv
applications/rf_link_experiment_logs/: 20260419_50ksps_uart_excerpt.txt  20260423_v0.5_optimization_plan.txt  optimization_attempts.md
applications/rf_link_rx/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml  stream.conf
applications/rf_link_rx/boards/: nrf54l15_connectkit_nrf54l15_cpuapp.overlay
applications/rf_link_rx/src/: debug_uart.c  debug_uart.h  main.c  proto.h  radio_link.c  radio_link.h  rx_reorder.c  rx_reorder.h  rx_sample_stream.c  rx_sample_stream.h
applications/rf_link_tag_notes/: v0.1-rf-link-apps.txt  (+5 more)
applications/rf_link_tx/: CMakeLists.txt  Kconfig.sysbuild  prj.conf  sample.yaml  sysbuild.cmake
applications/rf_link_tx/boards/: nrf54l15_connectkit_nrf54l15_cpuapp.overlay
applications/rf_link_tx/flpr_app/: CMakeLists.txt  prj.conf
applications/rf_link_tx/flpr_app/boards/: nrf54l15_connectkit_nrf54l15_cpuflpr.overlay
applications/rf_link_tx/flpr_app/src/: adc_sampler.c  adc_sampler.h  fatal_diag.c  ipc_tx.c  ipc_tx.h  main.c  sample_buffer.c  sample_buffer.h
applications/rf_link_tx/src/: debug_uart.c  debug_uart.h  fatal_diag.c  ipc_bridge.c  ipc_bridge.h  lp_trace.h  main.c  proto.h  radio_link.c  radio_link.h  tx_queue.c  tx_queue.h
(+1 files in other folders)
